[package]
name = "testback_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-cdk-macros = {workspace =true }
lazy_static = "1.4.0"
serde = "1.0.197"
serde_cbor = "0.11.2"